<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="viewModel"
            type="com.example.recipe_manager.recyclerView.RecipeViewModel" />

        <variable
            name="popup"
            type="com.example.recipe_manager.popup.RecipeFilter" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/background_dark"
        app:cardUseCompatPadding="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/FilterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:theme="@style/Text"
                android:text="@string/Filter"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/FilterText"
                android:layout_marginTop="5sp"
                android:gravity="center_vertical"
                android:id="@+id/first_row"
                android:layout_marginVertical="10sp"
                >

                <TextView
                    android:id="@+id/TasteText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:theme="@style/Text"
                    android:text="@string/Type"
                    android:layout_marginStart="20sp"
                    />

                <Spinner
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_taste"
                    android:theme="@style/Dropdown"
                    android:layout_marginEnd="20sp"
                    android:layout_alignParentEnd="true"
                    android:entries="@array/types_filter"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_row"
                android:layout_marginTop="5sp"
                android:gravity="center_vertical"
                android:id="@+id/second_row"
                android:layout_marginBottom="10sp"
                >
                <TextView
                    android:id="@+id/TypeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:theme="@style/Text"
                    android:text="@string/Time"
                    android:layout_marginStart="20sp"
                    />

                <Spinner
                    android:id="@+id/spinner_type"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20sp"
                    android:theme="@style/Dropdown"
                    android:layout_alignParentEnd="true"
                    android:entries="@array/times_filter"
                    />
            </RelativeLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>